--- a/bin/OPTIMUM-Neuro_tracking.Rmd
+++ b/bin/OPTIMUM-Neuro_tracking.Rmd
@@ -6,13 +6,18 @@ always_allow_html: yes
 
 ```{r setup, include = FALSE, warning = FALSE}
 
+kable_version <- as.character( packageVersion( 'kableExtra' ) )
+if (compareVersion( kable_version, '1.1.0') > 0 )
+  stop("kableExtra package must be version 1.1.0 - version ", kable_version,  
+       " is installed")
+
 # load graphics libraries
     library(plyr)
     library(ggplot2)
     library(reshape2)
     library(tidyverse) 
     library(knitr)
-    library(kableExtra)
+    library(kableExtra) 
     library(plotly)
     library(stringr)
     library(bsselectR)
