--- a/bin/OPTIMUM-Neuro_tracking.Rmd
+++ b/bin/OPTIMUM-Neuro_tracking.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "OPTIMUM-Neuro conference call 2020-10-02"
+title: "OPTIMUM-Neuro conference call 2020-11-06"
 output: html_document
 always_allow_html: yes
 ---
@@ -32,8 +32,8 @@ if (compareVersion( kable_version, '1.1.0') > 0 )
 
 source('functions.R')
 #read in data
-  mri <- read.csv('../sources/OPTIMUM_Neuro.csv',na.strings=c("","NA")) #contains all but MRI
-  df <- read.csv('../sources/OPTIMUM_Demo.csv', na.strings=c("","NA")) #contains just MRI
+  mri <- read.csv('../sources/OPTIMUM_2020-11-05_Neuro.csv',na.strings=c("","NA")) #contains all but MRI
+  df <- read.csv('../sources/OPTIMUM_2020-11-05_Demo.csv', na.strings=c("","NA")) #contains just MRI
   targets <- read.csv('../info/OPT_recruitTargets.csv')
   #make sure target data is in proper format
   targets$month <- as.character(targets$month)
@@ -134,7 +134,7 @@ kable(recruit_table, "html", escape = F, align = c('l', 'c', 'c', 'c', 'c', 'c',
   column_spec(1, width = "20em", background = '#f5f5f5') %>%
   add_footnote(c("`Consent` counts all participants who signed an OPTIMUM-Neuro consent form.", 
                  "`Enrollment` counts all participants who completed ≥1/3 of the MRI, bloodwork, and neuropsych at the baseline visit.",
-                 "`Completion` counts all enrolled participants who completed the 24 mth FU visit.", 
+                 "`Completion` counts all enrolled participants marked as completed under the `Baseline tracking form` in REDCap.", 
                  "`Termination` counts participants coded as: 'not eligible for randomization', 'withdrew', 'lost to follow-up', 'death', 'investigator discretion', and 'other'. Termination does not capture participants who completed the study, i.e., this category is independent from `Completion`."), 
                notation = "number") %>%
   footnote(general = "Current month captures calendar month. The `%` columns calculate percentage of target, with all sites having common targets.")
